# madar

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
apps/kds-slint/: Cargo.toml  MIGRATION-GUIDE.md  NOTES-settings.md  README.md
apps/kds-slint/assets/icons/: map.json
apps/kds-slint/src/: feature_checkout.rs  feature_floor.rs  feature_incoming.rs  feature_settings.rs  main.rs
apps/kds-slint/ui/: app.slint  auth.slint  components.slint  feature_checkout.slint  feature_floor.slint  feature_history.slint  feature_incoming.slint  feature_order_catalog.slint  feature_settings.slint  feature_shift.slint  icons.slint  kds.slint  kit.slint  sheet.slint  tokens.slint
rust-core/crates/madar-api/: .openapi-generator-ignore  Cargo.toml  README.md
rust-core/crates/madar-api/.openapi-generator/: FILES
rust-core/crates/madar-api/docs/: AbsorbedBy.md  AcceptingInput.md  Action.md  AddRoundRequest.md  AddToStockRequest.md  AddonCost.md  AddonIngredient.md  AddonInput.md  AddonItem.md  AddonItemIngredient.md  AddonOverride.md  AddonSalesRow.md  AddonSlot.md  AnalysisConfig.md  AssignBranchRequest.md  AssignTablesRequest.md  AuthApi.md  AuthPermissionsResponse.md  AvailabilityOut.md  BookingView.md  Branch.md  BranchAddonOverride.md  BranchAddonOverrideInput.md  BranchAvailabilityOut.md  BranchComparison.md  BranchDeliverySettings.md  BranchInventoryItem.md  BranchInventoryMovement.md  BranchInventoryTransfer.md  BranchMenuOverride.md  BranchMenuOverrideInput.md  BranchSalesReport.md  BranchSettingsInput.md  BranchSizeOverride.md  BranchSizeOverrideInput.md  BranchStockReport.md  BranchTable.md  BranchesApi.md  Bundle.md  BundleAssociation.md  (+332 more)
rust-core/crates/madar-api/src/: lib.rs
rust-core/crates/madar-api/src/apis/: auth_api.rs  branches_api.rs  bundles_api.rs  configuration.rs  costing_api.rs  delivery_api.rs  delivery_public_api.rs  discounts_api.rs  inventory_api.rs  kitchen_api.rs  menu_advisor_api.rs  menu_api.rs  mod.rs  open_tickets_api.rs  orders_api.rs  orgs_api.rs  payment_methods_api.rs  permissions_api.rs  purchasing_api.rs  qr_api.rs  realtime_api.rs  recipes_api.rs  reports_api.rs  reservations_api.rs  shifts_api.rs  stocktakes_api.rs  tills_api.rs  uploads_api.rs  users_api.rs  whatsapp_api.rs
rust-core/crates/madar-api/src/models/: absorbed_by.rs  accepting_input.rs  action.rs  add_round_request.rs  add_to_stock_request.rs  addon_cost.rs  addon_ingredient.rs  addon_input.rs  addon_item.rs  addon_item_ingredient.rs  addon_override.rs  addon_sales_row.rs  addon_slot.rs  analysis_config.rs  assign_branch_request.rs  assign_tables_request.rs  auth_permissions_response.rs  availability_out.rs  booking_view.rs  branch.rs  branch_addon_override.rs  branch_addon_override_input.rs  branch_availability_out.rs  branch_comparison.rs  branch_delivery_settings.rs  branch_inventory_item.rs  branch_inventory_movement.rs  branch_inventory_transfer.rs  branch_menu_override.rs  branch_menu_override_input.rs  branch_sales_report.rs  branch_settings_input.rs  branch_size_override.rs  branch_size_override_input.rs  branch_stock_report.rs  branch_table.rs  bundle.rs  bundle_association.rs  bundle_component_hydrated.rs  (+306 more)
rust-core/crates/madar-frb/: Cargo.toml  build.rs  exports.map
rust-core/crates/madar-frb/src/: frb_generated.rs  lib.rs
(+94 files in other folders)
