# flutter_rust_bridge wrapper over madar-core — binding code ONLY, no logic.
# The Flutter app links this crate; the Kotlin/Swift apps keep linking madar-core
# through UniFFI. madar-core itself is untouched.
[package]
# Underscore on purpose: Cargokit derives artifact names (libmadar_frb.a)
# from the PACKAGE name verbatim — a hyphen breaks its artifact lookup.
name = "madar_frb"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# cdylib → Android .so / desktop dylib; staticlib → iOS; lib → tests + codegen.
crate-type = ["lib", "cdylib", "staticlib"]
name = "madar_frb"

[dependencies]
madar-core = { path = "../madar-core" }
# Exact pin: the cargo crate, Dart package, and codegen CLI must share one version.
flutter_rust_bridge = "=2.12.0"
thiserror = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
